<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="infilms.asee.giiis.unex.es.thenoworder.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="infilms.asee.giiis.unex.es.thenoworder.ui.gallery.GalleryFragment"
        android:label="@string/menu_record"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_send"
        android:name="infilms.asee.giiis.unex.es.thenoworder.ui.send.SendFragment"
        android:label="@string/menu_authors"
        tools:layout="@layout/fragment_send" />
</navigation>