<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"  android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RecordDetailsActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_record_product_list"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorBackgroundProductList" />

        <TextView
            android:id="@+id/record_msg_total_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="44dp"
            android:text="@string/msg_total_price"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_record_product_list" />

        <TextView
            android:id="@+id/record_total_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="44dp"
            app:layout_constraintStart_toEndOf="@+id/record_msg_total_price_tv"
            app:layout_constraintTop_toBottomOf="@+id/rv_record_product_list" />

        <TextView
            android:id="@+id/record_msg_table_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="44dp"
            android:text="@string/table"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/record_total_price_tv" />

        <TextView
            android:id="@+id/record_table_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="44dp"
            app:layout_constraintStart_toEndOf="@+id/record_msg_table_tv"
            app:layout_constraintTop_toBottomOf="@+id/record_total_price_tv" />

        <Button
            android:id="@+id/delete_record_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="128dp"
            android:text="@string/delete_order"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/record_table_tv" />

        <TextView
            android:id="@+id/record_msg_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="360dp"
            android:text="id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/record_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="352dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/record_msg_id_tv"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>